# jisaku_pc_8088

./: .gitignore  README.md  jisaku_pc.tcl  setup_xpr.sh
demo/: .gitignore  Makefile  addr.asm  addr.h  blink_led.s  button_led.s  c_start.asm  cfonts.c  cmain.c  common.c  common.h  conv_fonts.c  display.s  fonts.asm  keyboard.c  keyboard.h  keyboard_dump.c  pack_file.c  pong.c  ram_access.s  term.c
firmware/: .gitignore  8088_firmware.s  8088_main.s  8088_por.s  8088_rom.v  Makefile  flash.tcl  genhex.c  i8088_rom.v  pack_8088_rom.c  por_8088.s  rom.v  spi_load_8088.s  z80_firmware.s  z80_main.s  z80_rom.v
flash/: README.md  flash.sh  flash.tcl
jisaku_pc/: archive_project_summary.txt  jisaku_pc.tcl  z80_test_top_behav.wcfg
jisaku_pc/jisaku_pc.srcs/constrs_1/imports/8088/: Arty-A7-35-Master.xdc
jisaku_pc/jisaku_pc.srcs/sources_1/bd/simple_uart/hdl/: simple_uart_wrapper.v
modules_hdl/: CMakeLists.txt  addr_conv_main.cpp  addr_converter.sv  addr_map.svh  axi_capture.sv  i8088_cpu.sv  i8088_cpu_main.cpp  i8088_top_main.cpp  ps2_keyboard.sv  ps2keyboard_main.cpp  top.sv  z80_cpu.sv  z80_cpu_main.cpp
sim_hdl/: i8088_top_sim.sv  z80_test.sv
tcl/: write_cfgmem.tcl
top_hdl/: i8088_top.sv  z80_uart.sv  z80_uart_constraint.xdc
xdc/: disable_lutlp.tcl
